# memory-palace

./: .gitignore  .pre-commit-config.yaml  README.md  demo_gmail_to_text copy.py  docker-compose.yml  license_header.txt  pyproject.toml
examples/: demo_gmail_to_text copy.py  demo_query_email.py
memory_palace/: __init__.py  __main__.py
memory_palace/capturers/: __init__.py
memory_palace/capturers/audio/: __init__.py  audio_capturer.py  whisper_capturer.py
memory_palace/capturers/email/: __init__.py  gmail_capturer.py
memory_palace/capturers/screen/: __init__.py  easyocr_capturer.py
memory_palace/indexers/: __init__.py  haystack_indexer.py
memory_palace/pipelines/: haystack_pipelines.py
memory_palace/processors/: __init__.py  email_processor.py  haystack_processor.py  whisper_processor.py
src/: __init__.py  __main__.py
src/capturers/audio/: whisper_capturer.py
src/capturers/email/: gmail_capturer.py
src/capturers/screen/: easyocr_capturer.py
src/email_to_text/: gmail.py
src/processors/: haystack_processor.py
src/screen_to_text/: demo_screen_to_text.py
